--- a/tests/test_cases/2007/command_support.yaml
+++ b/tests/test_cases/2007/command_support.yaml
@@ -1,6 +1,6 @@
 model_year: 2007
 supported_commands_by_ecu:
-  DB33:
+  "DB33":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
   - 0104:LOAD_PCT
@@ -23,6 +23,7 @@ supported_commands_by_ecu:
   - 0130:WARM_UPS
   - 0131:CLR_DIST
   - 0133:BARO
+  - 0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 013C:CATEMP11
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
   - 0142:VPWR
@@ -34,3 +35,30 @@ supported_commands_by_ecu:
   - 0149:APP_D
   - 014A:APP_E
   - 014C:TAC_PCT
+  - DB33.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - DB33.0103:FUELSYS1,FUELSYS2
+  - DB33.0104:LOAD_PCT
+  - DB33.0105:ECT
+  - DB33.0106:SHRTFT1
+  - DB33.0107:LONGFT1
+  - DB33.010A:FP
+  - DB33.010C:RPM
+  - DB33.010D:VSS
+  - DB33.010E:SPARKADV
+  - DB33.010F:IAT
+  - DB33.0110:MAF
+  - DB33.0121:MIL_DIST
+  - DB33.012E:EVAP_PCT
+  - DB33.0130:WARM_UPS
+  - DB33.0131:CLR_DIST
+  - DB33.0133:BARO
+  - DB33.013C:CATEMP11
+  - DB33.0143:LOAD_ABS
+  - DB33.0144:EQ_RAT
+  - DB33.0146:AAT
+  - DB33.014C:TAC_PCT
+unsupported_commands_by_ecu:
+  "D016":
+  - D016.22EE6F|ta=30,fc=1,c=1D:VOLVO_APP_POS
+  "D01A":
+  - D01A.224028|ta=01,fc=1,c=1D:VOLVO_SOC
