Update command data for Volvo/V70

--- a/tests/test_cases/2007/command_support.yaml
+++ b/tests/test_cases/2007/command_support.yaml
@@ -47,15 +47,23 @@ supported_commands_by_ecu:
   - DB33.010E:SPARKADV
   - DB33.010F:IAT
   - DB33.0110:MAF
+  - DB33.0111:TP
+  - DB33.0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
+  - DB33.0115:O2S12,SHRTFT11
+  - DB33.011C:OBDSUP
+  - DB33.011F:RUNTM
   - DB33.0121:MIL_DIST
   - DB33.012E:EVAP_PCT
   - DB33.0130:WARM_UPS
   - DB33.0131:CLR_DIST
   - DB33.0133:BARO
+  - DB33.0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - DB33.013C:CATEMP11
   - DB33.0143:LOAD_ABS
   - DB33.0144:EQ_RAT
+  - DB33.0145:TP_R
   - DB33.0146:AAT
+  - DB33.0147:TP_B
   - DB33.014C:TAC_PCT
 unsupported_commands_by_ecu:
   "D016":
