--- a/tests/test_cases/2007/commands/DB33.0107.yaml
+++ b/tests/test_cases/2007/commands/DB33.0107.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     LONGFT1: -6.25
   response: 18DAF11003410778
+- expected_values:
+    LONGFT1: -0.78125
+  response: 18DAF1100341077F
