--- a/tests/test_cases/2007/commands/DB33.010A.yaml
+++ b/tests/test_cases/2007/commands/DB33.010A.yaml
@@ -1,5 +1,8 @@
 command_id: DB33.010A
 test_cases:
 - expected_values:
+    FP: 300
+  response: 18DAF11003410A64
+- expected_values:
     FP: 306
   response: 18DAF11003410A66
