--- a/tests/test_cases/2007/commands/DB33.0143.yaml
+++ b/tests/test_cases/2007/commands/DB33.0143.yaml
@@ -3,3 +3,9 @@ test_cases:
 - expected_values:
     LOAD_ABS: 14.90196
   response: 18DAF1100441430026
+- expected_values:
+    LOAD_ABS: 37.64706
+  response: 18DAF1100441430060
+- expected_values:
+    LOAD_ABS: 68.23529
+  response: 18DAF11004414300AE
