--- a/tests/test_cases/2007/commands/DB33.0106.yaml
+++ b/tests/test_cases/2007/commands/DB33.0106.yaml
@@ -1,5 +1,8 @@
 command_id: DB33.0106
 test_cases:
 - expected_values:
+    SHRTFT1: 0
+  response: 18DAF11003410680
+- expected_values:
     SHRTFT1: 7.03125
   response: 18DAF11003410689
