--- a/tests/test_cases/2007/commands/DB33.010D.yaml
+++ b/tests/test_cases/2007/commands/DB33.010D.yaml
@@ -5,3 +5,14 @@ test_cases:
   response: |-
     18DAF11803410D00
     18DAF11003410D00
+- expected_values:
+    VSS: 1
+  response: 18DAF11803410D01
+- expected_values:
+    VSS: 97
+  response: |-
+    18DAF11803410D61
+    18DAF11003410D61
+- expected_values:
+    VSS: 125
+  response: 18DAF11803410D7D
