--- a/tests/test_cases/2007/commands/DB33.010E.yaml
+++ b/tests/test_cases/2007/commands/DB33.010E.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     SPARKADV: 5
   response: 18DAF11003410E8A
+- expected_values:
+    SPARKADV: 11
+  response: 18DAF11003410E96
