--- a/tests/test_cases/2007/commands/DB33.014C.yaml
+++ b/tests/test_cases/2007/commands/DB33.014C.yaml
@@ -3,3 +3,12 @@ test_cases:
 - expected_values:
     TAC_PCT: 1.17647
   response: 18DAF11003414C03
+- expected_values:
+    TAC_PCT: 10.98039
+  response: 18DAF11003414C1C
+- expected_values:
+    TAC_PCT: 12.54902
+  response: 18DAF11003414C20
+- expected_values:
+    TAC_PCT: 18.82353
+  response: 18DAF11003414C30
