--- a/tests/test_cases/2007/commands/DB33.0121.yaml
+++ b/tests/test_cases/2007/commands/DB33.0121.yaml
@@ -1,7 +1,15 @@
 command_id: DB33.0121
 test_cases:
 - expected_values:
+    MIL_DIST: 0
+  response: 18DAF1180441210000
+- expected_values:
     MIL_DIST: 356
   response: |-
     18DAF1180441210000
     18DAF1100441210164
+- expected_values:
+    MIL_DIST: 703
+  response: |-
+    18DAF1180441210000
+    18DAF11004412102BF
