--- a/tests/test_cases/2007/commands/DB33.010E.yaml
+++ b/tests/test_cases/2007/commands/DB33.010E.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     SPARKADV: 11
   response: 18DAF11003410E96
+- expected_values:
+    SPARKADV: 36
+  response: 18DAF11003410EC8
