--- a/tests/test_cases/2007/commands/DB33.0133.yaml
+++ b/tests/test_cases/2007/commands/DB33.0133.yaml
@@ -1,5 +1,8 @@
 command_id: DB33.0133
 test_cases:
 - expected_values:
+    BARO: 97
+  response: 18DAF11003413361
+- expected_values:
     BARO: 98
   response: 18DAF11003413362
