Update command data for Volvo/V70

--- a/tests/test_cases/2007/commands/DB33.0131.yaml
+++ b/tests/test_cases/2007/commands/DB33.0131.yaml
@@ -27,3 +27,8 @@ test_cases:
 - expected_values:
     CLR_DIST: 13312
   response: 18DAF1180441313400
+- expected_values:
+    CLR_DIST: 8739
+  response: |-
+    18DAF118044131342E
+    18DAF1100441312223
