Update command data for Volvo/V70

--- a/tests/test_cases/2007/commands/DB33.0131.yaml
+++ b/tests/test_cases/2007/commands/DB33.0131.yaml
@@ -33,7 +33,10 @@ test_cases:
     18DAF118044131342E
     18DAF1100441312223
 - expected_values:
-    CLR_DIST: 8790
+    CLR_DIST: 9003
   response: |-
-    18DAF1180441313461
-    18DAF1100441312256
+    18DAF1180441313537
+    18DAF110044131232B
+- expected_values:
+    CLR_DIST: 13624
+  response: 18DAF1180441313538
